--- a/index.html
+++ b/index.html
@@ -3,14 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula04</title>
-    <link rel="stylesheet" href="main.css">
+    <title>AtividadeII</title>
+    <style>
+        h1 {
+            color: green;
+        }
+        p {
+            font-size: 20px;
+        }
+        ul li {
+            background-color: yellow;
+            margin: 5px 0;
+            padding: 5px;
+        }
+        span {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <Nav>
-        <div class="paragrafo">
-            <p>Esse paragrafo receberá estilo inline mudança de cor para azul</p>
-        </div>
-    </Nav>
+    <center>
+        <h1>Bem-vindo ao meu Documento HTML</h1>
+    </center>
+    <p>Este é um paragrafo de exemplo para mostra estilização usando css interna em uma atividade da <span>INFINITY</span></p>
+    <ul>
+        <li>Primeiro Item da Lista</li>
+        <li>Segundo Item da Lista</li>
+        <li>Terceiro Item da Lista</li>
+    </ul>
+    
 </body>
 </html>
