--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula04</title>
-    <link rel="stylesheet" href="main.css">
+    <title>AtividadeIII</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <Nav>
-        <div class="paragrafo">
-            <p>Esse paragrafo receberá estilo inline mudança de cor para azul</p>
-        </div>
-    </Nav>
+    <center>
+        <h1>Bem-vindo ao Meu Documento HTML</h1>
+    </center>
+    <p>Este é um parágrafo de exemplo para demonstrar estilização CSS interna</p>
+    <img src="imagens/jonathanlopes.jpg" alt="jonathanlopes">
 </body>
 </html>
