--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pr-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AtividadeIII</title>
+    <title>AtividadeIV</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <center>
-        <h1>Bem-vindo ao Meu Documento HTML</h1>
-    </center>
-    <p>Este é um parágrafo de exemplo para demonstrar estilização CSS interna</p>
-    <img src="imagens/jonathanlopes.jpg" alt="jonathanlopes">
+    <header>
+        <h1>Meu Site Responsivo</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Contatos</a></li>
+            <li><a href="#">Serviços</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h3>Conteúdo Principal</h3>
+                <p>Este é o conteúdo principal do nosso site resposivo. Ele se ajustará automaticamente para diferentes tamanhos de tela </p>
+                    <p>Experimente redimensionar a janela do navegador para ver como o layout se adapta.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Meu Site Responsivo. Todos os direitos reservados.</p>
+    </footer>
+    
 </body>
 </html>
