--- a/index.html
+++ b/index.html
@@ -3,181 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade V</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        img {
-            width: 100px;
-            height: 100px;
-        }
-    </style>
+    <title>Paleta Harmoniosa</title><link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="hero">
-            <span class="img"><img src="jonathanlopes.jpg" alt="Jonathan"></span>
-            <div class="nome">
-                <h1>Jonathan do Nascimento Lopes</h1>
-                <p class="job-title">Segurança Patrimonial | Prevenção de Perdas  | Estudante de Programação Full Stacke</p>
-            </div>
-        </div>
+        <h1>Bem-vindo ao site da Paleta Harmoniosa</h1>
     </header>
     <nav>
-        <div class="info">
-            <span>📧 jonathanlopesce@ymai.com</span>
-                <span>📱 (85) 9.8686.5111</span>
-                    <span>🌐 <a href="https://www.linkedin.com/in/jonathan-lopes-14946b141">linkedin.com/in/jonathanlopesce</a></span>
-        </div>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
     </nav>
-    <main>
-        <section class="about-me">
-            <h2>Sobre Mim</h2>
-            <p>Profissional apoixonado pela Segurança privada e Tecnologia, com mais se 7 anos de experiência em segurança privada e preevenção de perdas, um desenvolvimento solido na área, e venho junto com essa base a tecnologia, inovação com pacote office, e progração full stack. </p>
-        </section>
-    </main>
-    <section class="esperience">
-        <h2>Experiência Profissional</h2>
+    <section>
+        <h2>Conteúdo principal</h2>
+        <p>Esta é a seção principal do site. Aproveite o esquema de cores vibrante e calmante!</p>
+        <button>Click</button>
     </section>
-    <article>
-        <div class="header">
-            <h3>Prefeitura de Fortaleza Regional I</h3>
-            <span class="company">Motorista</span>
-                        <span class="date">Mar 2009 - Dez 2012</span>
-                    </div>
-                    <ul>
-                        <li>Direção devenciva</li>
-                        <li>Desevolvimento com a Fiscalização</li>
-                        <li>Bliz Preventiva</li>
-                    </ul>
-        </div>
-    </article>
-    <article>
-        <div class="header">
-            <h3>Prefeitura de Fortaleza Regional III</h3>
-            <span class="company">Motorista</span>
-                        <span class="date">Dez 2011 - Dez 2012</span>
-                    </div>
-                    <ul>
-                        <li>Direção devenciva</li>
-                        <li>Desevolvimento com a Fiscalização</li>
-                        <li>Bliz Preventiva</li>
-                    </ul>
-        </div>
-    </article>
-    <article>
-        <div class="header">
-            <h3>Prefeitura de Caucaia</h3>
-            <span class="company">Auxiliar Adiministrativo</span>
-                        <span class="date">Dez 2012 - Dez 2013</span>
-                    </div>
-                    <ul>
-                        <li>Auxiliar na secretaria da escola</li>
-                        <li>laboratorio de informatica</li>
-                        <li>Cantina da escola </li>
-                    </ul>
-        </div>
-    </article>
-    <article>
-        <div class="header">
-            <h3>Coca Cola</h3>
-            <span class="company">Motorista</span>
-                        <span class="date">Dez 2013 - abr 2014</span>
-                    </div>
-                    <ul>
-                        <li>Rota de entregas de mercadoria da empresa</li>
-                        <li>Planejamento de rota</li>
-                        <li>Abastecimento de Veiculos</li>
-                    </ul>
-        </div>
-    </article>
-    <article>
-        <div class="header">
-            <h3>Prosegur</h3>
-            <span class="company">Agente de Portaria</span>
-                        <span class="date">Mai 2014 - Jun 2014</span>
-                    </div>
-                    <ul>
-                        <li>controle de veiculos</li>
-                        <li>controle de Clientes e Colaboradores</li>
-                        <li>Controle de combustivel</li>
-                    </ul>
-        </div>
-    </article>
-    <article>
-        <div class="header">
-            <h3>Beach Park Hóteis e Turismo</h3>
-            <span class="company">Agente de Portaria</span>
-                        <span class="date">Jul 2014 - Dez 2015</span>
-                    </div>
-                    <ul>
-                        <li>Controle de Chaves</li>
-                        <li>Controle de Prestador de Serviços e Colaboradores<li>
-                        <li>Cotrole de Veiculos</li>
-                    </ul>
-        </div>
-    </article>
-    <article>
-        <div class="header">
-            <h3>Beach Park Hóteis e Turismo</h3>
-            <span class="company">Vigilante</span>
-                        <span class="date">Dez 2015 - Mar 2020</span>
-                    </div>
-                    <ul>
-                        <li>Segurança Patrimonial</li>
-                        <li>Controle de Acesso</li>
-                        <li>Primeniro Socorros</li>
-                    </ul>
-        </div>
-    </article>
-    <article>
-        <div class="header">
-            <h3>Mercadinhos São Luiz</h3>
-            <span class="company">Prevenção de Perdas</span>
-                        <span class="date">Fev 2021 - Mai 2024</span>
-                    </div>
-                    <ul>
-                        <li>Verificação de Bebidas, Carnes e Pefumaria </li>
-                        <li>Verificação com CFTV</li>
-                        <li>Criação de Planilhas</li>
-                    </ul>
-        </div>
-    </article>
-    <section class="academic-formation">
-        <h2>Formação Acadêmica</h2>
-        
-        <article>
-            <div class="education-header">
-                <h3>Cursando Analise e Desevolvimento de Sistemas</h3>
-                <span class="institution">Universidade Uninassau (CE)</span>
-                <span class="date">2024 - 2026</span>
-            </div>
-            <p>Liguagem de Programação</p>
-        </article>
-
-        <article>
-            <div class="education-header">
-                <h3>Cursando Programação Full Stack</h3>
-                <span class="institution">Infinity</span>
-                <span class="date">2024 - 2026</span>
-            </div>
-            <p>Ênfase em Sistemas Distribuídos e Arquitetura de Software</p>
-        </article>
-        <aside class="skills">
-            <h2>Habilidades</h2>
-            <div class="skills-list">
-                <span>informática Intermediaria</span>
-                <span>Formação de Brigada de Incêndio</span>
-                <span>Gentão de Conflitos</span>
-                <span>Pacote Office</span>
-                <span>Música</span>
-                <span>Proatividade</span>
-                <span>Coesão de Equipe</span>
-                <span>Comunicação Eficaz</span>
-            </div>
-        </aside>
+    <aside>
+        <h3>Informações Laterais</h3>
+        <p>Aqui você pode encontrar informações adicionais ou anúncios</p>
+    </aside>
     <footer>
-        <p>© 2024 Jonathan do Nascimento Lopes | Todos os direitos reservados</p>
+        <p>&copy; Site da Paleta Harmoniosa 2024. Todos os direitos reservados.</p>
     </footer>
-
 </body>
 </html>
